set dark mode, fix styles and login form layout

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,5 +1,10 @@
 // app global css in SCSS form
 
+* {
+  color: $light;
+  fill: $light;
+}
+
 h1,
 h2,
 h3,
