--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,12 +12,13 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #ff0037;
+$primary: #6200ff;
 $secondary: #26a69a;
 $accent: #9c27b0;
 
 $dark: #222;
-$dark-page: #333;
+$dark-page: #222;
+$light: #eee;
 
 $positive: #21ba45;
 $negative: #c10015;
